# kodegen-bundler-release

./: .cyrup_release_state.json  .gitignore  Cargo.toml  README.md  postinst.deb.sh  postinst.rpm.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
examples/: debug_publish_order.rs  test_sorted_order.rs
src/: error.rs  lib.rs  main.rs  metadata.rs
src/bundler/: builder.rs  error.rs  mod.rs  patch.rs  settings.rs
src/bundler/platform/: mod.rs
src/bundler/platform/linux/: appimage.rs  debian.rs  mod.rs  rpm.rs
src/bundler/platform/linux/freedesktop/: mod.rs
src/bundler/platform/macos/: app.rs  dmg.rs  icon.rs  mod.rs  sign.rs  universal.rs
src/bundler/platform/windows/: icon.rs  mod.rs  sign.rs  util.rs
src/bundler/platform/windows/nsis/: mod.rs
src/bundler/resources/: icons.rs  mod.rs
src/bundler/utils/: fs.rs  http.rs  mod.rs
src/cli/: args.rs  mod.rs  output.rs  retry_config.rs
src/cli/commands/: cleanup.rs  devcontainer.rs  helpers.rs  mod.rs  preview.rs  resume.rs  rollback.rs  runway.rs  status.rs  temp_clone.rs  validate.rs
src/cli/commands/bundle/: helpers.rs  mod.rs
src/cli/commands/release/: impl.rs  mod.rs
src/cli/commands/release/impl/: context.rs  mod.rs  phases.rs  platform.rs  release.rs  retry.rs
src/cli/docker/: artifacts.rs  bundler.rs  guard.rs  image.rs  limits.rs  mod.rs  platform.rs
src/git/: git_adapter.rs  manager.rs  mod.rs  operations.rs
src/git/manager/: config.rs  mod.rs  release.rs  results.rs  state.rs  validation.rs
src/github/: mod.rs  release_manager.rs
src/metadata/: mod.rs
src/publish/: cargo_ops.rs  mod.rs  publisher.rs
src/source/: mod.rs
src/state/: manager.rs  mod.rs  release_state.rs
src/version/: bumper.rs  mod.rs  toml_editor.rs  updater.rs
src/workspace/: analyzer.rs  dependency.rs  mod.rs  validator.rs
tasks/: 01-fix-metadata-binary-discovery.md
tests/: bundler_tests.rs
tests/fixtures/: Cargo.toml  README.md
tests/fixtures/src/: daemon.rs  main.rs
