[package]
name = "kodegen_bundler_release"
version = "0.1.1"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-bundler-release"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "kodegen_bundler_release"
path = "src/main.rs"

[dependencies]
# Git operations using pure Rust (no CLI)
gix = "0.74"
# Explicit dependencies to fix Docker build transitive dependency resolution
gix-lock = "19"
gix-tempfile = "19"
gix-utils = "0.3"
gix-url = "0.28"  # Version compatible with gix 0.74

# Shared Git operations package
kodegen_tools_git = { version = "0.1" }

# GitHub API integration for releases
kodegen_tools_github = { version = "0.1" }

# Code signing for macOS artifacts
kodegen_bundler_sign = { version = "0.1" }

# Binary content for asset upload
bytes = "1"

# Format-preserving TOML editing
toml_edit = "0.23"

# Semantic version parsing and manipulation
semver = { version = "1", features = ["serde"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "cargo", "env"] }

# Error handling and context
anyhow = "1"
thiserror = "2"

# Async runtime for process execution
tokio = { version = "1", features = ["full"] }

# Async HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }

# JSON serialization for state persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date and time handling for state tracking
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform process existence checking (stale tracking cleanup)
sysinfo = "0.33"

# Dependency graph analysis
petgraph = "0.8"

# TOML parsing and manipulation
toml = "0.9"

# Process execution
which = "8"

# Logging
log = "0.4"
env_logger = "0.11"

# Base64 encoding/decoding for certificate handling
base64 = "0.22"

# TLS support for GitHub API (octocrab/reqwest)
rustls = { version = "0.23", features = ["ring"] }

# Path utilities
path-absolutize = "3"

# Workspace integration 
sugars_collections = { version = "0.5" }

# SHA-256 hashing for artifact checksums
sha2 = "0.10"

# Terminal colors
cyrup_termcolor = "2"

# Regular expressions (source parsing, publish retry logic)
regex = "1"

# Glob pattern matching (workspace analysis)
glob = "0.3"

# Cross-platform directories (.zshrc sourcing, temp clone tracking)
dirs = "6"

[target.'cfg(unix)'.dependencies]
# Advisory file locking (state management on Unix)
nix = { version = "0.30", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
